fix fields for minimal ORCID profile, fix 0.3.0 db migration [CE-255]
